<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">约饭</string>
    <string name="hello_world">Hello world!</string>
    <string name="shouye">首页</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="NO">失败</string>
    <string name="zhanghao">帐号</string>
    <string name="yonghuming">姓名</string>
    <string name="dizhi">地址</string>
    <string name="action_settings">Settings</string>

    <!-- yangjun -->
    <string name="left_firstfoodrecommend">回锅肉</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_location">定位</string>
    <string name="xlistview_header_relocation">点击定位</string>
    <string name="xlistview_footer_AD_scrolltext">约饭APP——好吃你就多吃点，味道好才是真的好,惊喜情怀价</string>
    <!-- sujunhua -->

    <string name="wallet">0元</string>
    <string name="wallet_meituan">我的钱包</string>
    <string name="red_packet">0张</string>
    <string name="red_packet_meituan">我的红包</string>
    <string name="cash_coupon">0张</string>
    <string name="cash_coupon_business">商家代金券</string>
    <string name="address">管理收货地址</string>
    <string name="myfavorite">我的收藏</string>
    <string name="help">帮助与反馈</string>
    <string name="more">更多</string>
    <string name="tel">客服电话：400-850-7777</string>
    <string name="service_time">服务时间：9:00-23:00</string>
    <string name="account">账户余额              ¥0</string>
    <string name="tv_recharge">充值</string>
    <string name="tv_withdraw">提现</string>
    <string name="tv_mycard">我的银行卡</string>
    <string name="tv_mycard_count">0张</string>
    <string name="tv_mycash_coupon">我的现金券</string>
    <string name="tv_pay_manage_walletmeituan">支付管理</string>
    <string name="tv_pay_manage_set_walletmeituan">设置支付密码</string>
    <string name="tv_snatch_walletmeituan">一元夺宝</string>
    <string name="tv_snatch_need_walletmeituan">实现梦想只要一元</string>
    <string name="tv_activity_redpacketmeituan">暂无可用的优惠券</string>
    <string name="btn_activity_redpacketmeituan">添加</string>
	<string name="activity_walletmeituan">我的钱包</string>
	<string name="activity_redpacketmeituan">我的红包</string>
	<string name="tv_activity_cashcoupon">暂无可用优惠券</string>
	<string name="activity_cashcoupon_business">商家代金券</string>
	<string name="icon_activity_mycount">头像</string>
	<string name="tv_username_updata_activity_mycount">修改</string>
	<string name="tv_password_updata_activity_mycount">修改账户密码</string>
	<string name="tv_number_activity_mycount">已绑定手机号</string>
	<string name="tv_user_number_activity_mycount">159****8188</string>
	<string name="btn_exit_activity_mycount">退出当前账号</string>
	<string name="activity_mycount">我的账户</string>
	<string name="tv_activity_cash_coupon">暂无可用的优惠券</string>
	<string name="btn_add_activity_address">添加收货地址</string>
	<string name="btn_manager_activity_address">管理收货地址</string>
	<string name="btn_updata_address_activity_address">修改</string>
	<string name="activity_address">我的收货地址</string>
	<string name="tv_activity_myfavorite">您还没收藏的商家</string>
	<string name="btn_reload_activity_myfavorite">重新加载</string>
	<string name="activity_myfavorite">我的收藏</string>
	<string name="tv_service_activity_help">在线客服</string>
	<string name="tv_suggest_activity_help">意见反馈</string>
	<string name="tv_question_activity_help">常见问题</string>
	<string name="activity_help">帮助与反馈</string>
	<string name="tv_check_updata_more">检查更新</string>
	<string name="tv_share_more">分享给好友</string>
	<string name="tv_name_more">约饭 V4.1.3</string>
	<string name="activity_more">更多</string>
	<string name="et_fragment_login">美团网账户/手机号/邮箱</string>
	<string name="et_fragment_password">密码</string>
	<string name="btn_fragment_login">登陆</string>
	<string name="tv_forget_password">忘记密码</string>
	<string name="et_fragment_phone">请输入您的手机号</string>
	<string name="btn_fragment_phone">获取验证码</string>
	<string name="et_fragment_phone_code">请输入收到的验证码</string>
	<string name="tv_phone_activity_login">手机号快捷登陆</string>
	<string name="tv_password_activity_login">账户密码登陆</string>
	<string name="tv_activity_login_register">立即注册</string>
	<string name="activity_register">注册</string>
	<string name="tv_activity_register_phone">1 输入手机号码</string>
	<string name="tv_activity_register_code">2 输入验证码</string>
	<string name="tv_activity_register_password">3 设置密码</string>
	<string name="et_fragment_register">请输入您的手机号</string>
	<string name="btn_fragment_register">获取验证码</string>
	<string name="tv_fragment_register">我已阅读并接受《美团网用户协议》</string>
	<string name="et_fragment_register_code">请输入手机获取的短信验证码</string>
	<string name="btn_fragment_register_code">提交验证码</string>
	<string name="et_fragment_register_password">6-32位字母数字字符组成</string>
	<string name="et_fragment_register_password_agin">请再次输入设置的密码</string>
	<string name="tv_contacts_activity_add_address">联系人</string>
	<string name="tv_name_activity_add_address">姓名：</string>
	<string name="et_putname_activity_add_address">请填写收货人的姓名</string>
	<string name="cb_man_activity_add_address">先生</string>
	<string name="cb_woman_activity_add_address">女士</string>
	<string name="tv_phone_activity_add_address">手机：</string>
	<string name="et_putphone_activity_add_address">请填写收货手机号码</string>
	<string name="tv_address_activity_add_address">收货地址</string>
	<string name="tv_map_address_activity_add_address">小区/大厦/学校：</string>
	<string name="tv_number_activity_add_address">楼号-门牌号：</string>
	<string name="et_number_activity_add_address">例：12号楼417室</string>
	<string name="btn_commit_activity_baidumap">确定</string>	
	<string name="et_map_address_activity_add_address">请输入送餐地址</string>

	<!-- 杨家琨 -->
	
    <string name="enter_customer">我是顾客</string>
    <string name="enter_seller">我是商家</string>
    <string name="delet_order_dialog">订单删除后将不可恢复,是否删除订单?</string>
    <string name="order_state_commit">等待商家接单。5分钟内商家未接单，将自动取消。</string>
    <string name="order_state_isCommit">订单已提交</string>
    <string name="order_state_isCommit_remarks">等待商家接单。5分钟内商家未接单，将自动取消。</string>
    <string name="order_state_isPayed">商家已接单</string>
    <string name="order_state_isPayed_remarks">您的订单已支付成功，请等待商家接单。</string>
    <string name="order_state_notPayed">待支付</string>
    <string name="order_state_notPayed_remarks">请在15分钟内完成支付</string>
    <string name="order_state_isAccepted">商家已接单</string>
    <string name="order_state_isAccepted_remarks">商品准备中。由约饭专送提供高品质配送服务，配送进度请咨询商家。</string>
    <string name="order_state_isCompleted">订单完成</string>
    <string name="order_state_isCompleted_remarks">您的订单已完成，祝您用餐愉快！</string>
    <string name="order_state_isCancled">订单取消</string>
    <string name="order_state_isCancled_remarks">您的订单已取消</string>
</resources>