<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tv_activity_register_phone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/tv_activity_register_code" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/tv_activity_register_password" />
    </LinearLayout>
     <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <EditText 
         android:id="@+id/et_fragment_register_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/et_fragment_register_code"
         android:layout_marginTop="20dp"
         android:inputType="number"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
     
     <Button 
         android:id="@+id/btn_fragment_register_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/shape_login_button"
         android:text="@string/btn_fragment_register_code"/>
     
</LinearLayout>

