<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/login_count" />

        <EditText
            android:id="@+id/et_fragment_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/et_fragment_login" />
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/et_fragment_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="textPassword"
            android:hint="@string/et_fragment_password" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_fragment_login_acount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/btn_fragment_login" />

    <TextView
        android:id="@+id/tv_forget_password_login_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_forget_password"
        android:textColor="@color/orange" />

</LinearLayout>
